<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizarsenal.MainActivity">

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="16sp"
        android:paddingBottom="36dp"/>

    <LinearLayout
        android:id="@+id/Question1"
        android:layout_below="@+id/intro"
        style="@style/CustomQuestionLayoutStyle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question1"
            android:id="@+id/textView" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">
            <RadioButton android:id="@+id/Answer_1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_1.1"
                android:onClick="onRadioButtonClickedQuestion1"/>
            <RadioButton android:id="@+id/Answer_1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_1.2"
                android:onClick="onRadioButtonClickedQuestion1"/>
            <RadioButton android:id="@+id/Answer_1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_1.3"
                android:onClick="onRadioButtonClickedQuestion1"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Question2"
        android:layout_below="@+id/Question1"
        style="@style/CustomQuestionLayoutStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question2"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <CheckBox android:id="@+id/Answer_2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_2.1"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/Answer_2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_2.2"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/Answer_2.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_2.3"
                android:onClick="onCheckboxClicked"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Question3"
        android:layout_below="@+id/Question2"
        style="@style/CustomQuestionLayoutStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question3"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/Answer_3"
                android:inputType="textNoSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/Answer_3.1"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Question4"
        android:layout_below="@+id/Question3"
        style="@style/CustomQuestionLayoutStyle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question4"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">
            <RadioButton android:id="@+id/Answer_4.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_4.1"
                android:onClick="onRadioButtonClickedQuestion4"/>
            <RadioButton android:id="@+id/Answer_4.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer_4.2"
                android:onClick="onRadioButtonClickedQuestion4"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Question5"
        android:layout_below="@+id/Question4"
        style="@style/CustomQuestionLayoutStyle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question5"
            />
        <Spinner
            android:id="@+id/Answer_5_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/Answer_5_array"
            android:prompt="@string/Answer_5_prompt"/>
    </LinearLayout>

    <Button
        android:id="@+id/Check"
        android:layout_below="@+id/Question5"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Check"
        android:onClick="Check"/>

</RelativeLayout>

</ScrollView>